# pulse-agent

./: .coverage  .dockerignore  .env.example  .gitignore  API_CONTRACT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE.md  DESIGN_PRINCIPLES.md  Dockerfile  Dockerfile.deps  Dockerfile.full  EVAL_PROMPTS.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  TESTING.md  pyproject.toml
.claude/: settings.json
.claude/agents/: performance-analyzer.md  protocol-checker.md  psychologist.md  ux-workflow-reviewer.md
.claude/hooks/: auto-format-py.sh  block-env.sh
.github/workflows/: build-push.yml  evals.yml  secret-scan.yml
.playwright-mcp/: page-2026-04-09T21-32-05-552Z.yml  page-2026-04-09T21-33-06-940Z.yml  page-2026-04-09T21-34-40-585Z.yml  page-2026-04-09T21-35-05-794Z.yml  page-2026-04-09T21-35-16-018Z.yml  page-2026-04-09T21-35-31-463Z.yml  page-2026-04-09T21-35-40-077Z.yml  page-2026-04-09T21-35-48-807Z.yml  page-2026-04-09T21-36-01-566Z.yml  page-2026-04-09T21-36-10-879Z.yml
artifacts/: live_baseline.json  live_baseline_17.json  live_baseline_sonnet46.json
chart/: Chart.yaml  values.yaml
chart/templates/: clusterrole.yaml  deployment.yaml  mcp-server.yaml  networkpolicy.yaml  postgresql.yaml  servicemonitor.yaml  ws-token-secret.yaml
deploy/: quick-deploy.sh  rebuild-deps.sh
docs/: ARCHITECTURE.md  JOURNEY.md  SKILL_DEVELOPER_GUIDE.md  _config.yml  index.html
scripts/: bump-version.sh  chaos-test.sh  install-hooks.sh
sre_agent/: __init__.py  agent.py  api.py  async_db.py  audit_scanner.py  change_risk.py  chat_history.py  component_registry.py  component_transform.py  config.py  context_bus.py  db.py  db_migrations.py  db_schema.py  decorators.py  dependency_graph.py  error_tracker.py  errors.py  fleet_tools.py  git_tools.py  gitops_tools.py  handoff_tools.py  harness.py  inbox.py  inbox_generators.py  intelligence.py  k8s_client.py  k8s_tools.py  layout_engine.py  layout_templates.py  log_fingerprinter.py  logging_config.py  main.py  mcp_client.py  mcp_renderer.py  monitor.py  observability.py  orchestrator.py  plan_runtime.py  postmortem.py  (+32 more)
sre_agent/api/: __init__.py  agent_ws.py  analytics_rest.py  app.py  auth.py  chat_rest.py  context.py  debug_rest.py  eval_rest.py  fix_rest.py  inbox_rest.py  memory_rest.py  metrics_rest.py  monitor_rest.py  sanitize.py  scanner_rest.py  skill_rest.py  tools_rest.py  topology_rest.py  view_events.py  views.py  ws_endpoints.py
sre_agent/evals/: README.md  __init__.py  ablation.py  cli.py  compare.py  history.py  judge.py  outcomes.py  replay.py  replay_cli.py  rubric.py  runner.py  scenarios.py  selector_eval.py  types.py  weekly_digest.py
sre_agent/k8s_tools/: __init__.py  advanced.py  audit.py  deployments.py  diagnostics.py  generic.py  live_table.py  monitoring.py  nodes.py  pods.py  validators.py  workloads.py
sre_agent/memory/: __init__.py  memory_tools.py  patterns.py  retrieval.py  runbooks.py  store.py
sre_agent/monitor/: __init__.py  actions.py  cluster_monitor.py  confidence.py  findings.py  fix_planner.py  investigations.py  registry.py  scanners.py  session.py  trend_scanners.py
sre_agent/plan_templates/: __init__.py
sre_agent/repositories/: __init__.py  analytics_repo.py  base.py  context_bus_repo.py  (+6 more)
tests/: conftest.py  eval_prompts.py  test_ablation.py  test_acm_recipes.py  test_activity_endpoint.py  test_agent.py  test_analytics_rest.py  test_api_http.py  test_api_tools.py  test_api_websocket.py  test_audit_scanner.py  test_backend_integration.py  test_briefing.py  test_change_risk.py  test_chat_history.py  test_component_registry.py  test_component_transform.py  test_config.py  test_context_bus.py  test_db.py  test_dependency_graph.py  test_discover_metrics.py  test_error_tracker.py  test_errors.py  test_eval_cli.py  test_eval_compare.py  test_eval_framework.py  test_eval_history.py  test_eval_outcomes.py  test_eval_replay.py  test_eval_tool_selection.py  test_evals_judge.py  test_evals_runner.py  test_evaluation.py  test_fix_planner.py  test_fleet_tools.py  test_git_tools.py  test_gitops_tools.py  test_handoff.py  test_harness.py  (+64 more)
(+93 files in other folders)
