[project]
name = "openshift-sre-agent"
version = "1.0.0"
description = "An AI-powered OpenShift SRE agent using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.52.0",
    "kubernetes>=31.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
sre-agent = "sre_agent.main:main"
pulse-agent-api = "sre_agent.serve:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
