[project]
name = "openshift-sre-agent"
version = "1.0.0"
description = "An AI-powered OpenShift SRE agent using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.52.0",
    "kubernetes>=31.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
sre-agent = "sre_agent.main:main"
pulse-agent-api = "sre_agent.serve:main"
pulse-agent-eval = "sre_agent.evals.cli:main"
pulse-agent-eval-outcomes = "sre_agent.evals.outcomes_cli:main"
pulse-agent-eval-weekly-digest = "sre_agent.evals.weekly_digest_cli:main"

[tool.setuptools.packages.find]
include = ["sre_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
