[project]
name = "openshift-sre-agent"
version = "1.16.0"
description = "An AI-powered OpenShift SRE agent using Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic[vertex]>=0.52.0",
    "kubernetes>=31.0.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9.0",
    "python-json-logger>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.0"]

[project.scripts]
sre-agent = "sre_agent.main:main"
pulse-agent-api = "sre_agent.serve:main"
pulse-agent-eval = "sre_agent.evals.cli:main"
pulse-agent-eval-outcomes = "sre_agent.evals.outcomes_cli:main"
pulse-agent-eval-weekly-digest = "sre_agent.evals.weekly_digest_cli:main"

[tool.setuptools.packages.find]
include = ["sre_agent*"]

[tool.setuptools.package-data]
"sre_agent.evals.scenarios_data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # import not at top (used for circular import workarounds)
    "B008",   # function call in default arg (used by FastAPI Depends)
    "B904",   # raise from in except (not always appropriate)
    "B905",   # zip without strict (Python 3.10+)
    "SIM102", # nested if (readability preference)
    "SIM105", # contextlib.suppress (readability preference)
    "SIM108", # ternary operator (readability preference)
    "TC001",  # move app imports to TYPE_CHECKING block (too pedantic)
    "TC003",  # move stdlib imports to TYPE_CHECKING block (too pedantic)
    "RUF005", # unpacking instead of concatenation (readability preference)
    "RUF006", # asyncio.create_task without storing reference (intentional fire-and-forget)
    "B023",   # function definition does not bind loop variable (false positive for closures)
    "N806",   # variable in function should be lowercase (used for local constants)
]

[tool.ruff.lint.isort]
known-first-party = ["sre_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
